--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "scripts": {
     "start": "nodemon ./src/server/index.ts",
     "build": "webpack --mode=production --node-env=production",
-    "build:docker": "docker build --platform=linux/amd64 -t app .",
-    "start:docker": "docker run --rm -p 3000:3000 app",
+    "build:docker": "docker build --platform=linux/amd64 -t shri-infra .",
+    "start:docker": "docker run --rm -p 3000:3000 shri-infra",
     "watch": "webpack --watch",
     "test": "jest",
     "lint": "eslint ./src"
