--- a/.github/workflows/fix.yml
+++ b/.github/workflows/fix.yml
@@ -16,6 +16,7 @@ jobs:
     steps:
       - uses: actions/checkout@v4
         with:
+          fetch-depth: 0
           ref: releases/${{ env.VERSION }}
       - uses: actions/setup-node@v4
         with:
